syntax = "proto3";
package merkle;

import "digest.proto";

// Represents a sparse Merkle path.
message SparseMerklePath {
    // List of sibling node hashes, in order from the root to the leaf.
    repeated digest.Digest siblings = 1;
}
